OrderService class call to inventory-serice for stock availabiliy verification